--- a/config/database.yml
+++ b/config/database.yml
@@ -35,10 +35,10 @@ test:
 production:
   primary: &primary_production
     <<: *default
-    database: app_production
-    username: app
+    database: loamy-api_production
+    username: loamy-api
     password: <%= ENV["APP_DATABASE_PASSWORD"] %>
   queue:
     <<: *primary_production
-    database: app_production_queue
+    database: lomay-api_production_queue
     migrations_paths: db/queue_migrate
