--- a/config/database.yml
+++ b/config/database.yml
@@ -1,9 +1,3 @@
-# SQLite. Versions 3.8.0 and up are supported.
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem "sqlite3"
-#
 default: &default
   adapter: postgresql
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
@@ -20,18 +14,14 @@ development:
     database: loamy_api_local_queue
     migrations_paths: db/queue_migrate
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
+
 test:
   primary:
-    <<: *default
     adapter: sqlite3
     database: db/test.sqlite3
   queue:
-    <<: *default
     adapter: sqlite3
-    database: loamy_api_local_queue_test
+    database: db/test-queue.sqlite3
     migrations_paths: db/queue_migrate
 
 production:
